# NeuroLedger

./: .gitignore  Anchor.toml  README.md  README_SETUP.md  convert_to_onnx.py  create_sample_model.py  model.onnx  model.pkl  package-lock.json  package.json  run-local.sh  test_api_script.py  test_onnx.py
app/: .env.local.template  neuro_ledger.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/components/: PredictionDashboard.tsx  PredictionForm.tsx  TransactionStatus.tsx  VerifyAndRewardExample.tsx  WalletConnection.tsx  WalletProviderWrapper.tsx
app/lib/: LocalWalletAdapter.ts  solana.ts  useAnchor.tsx  zkProof.ts
app/pages/: _app.tsx  index.tsx
app/pages/api/: predict.ts
app/styles/: globals.css
programs/my-first-program/: Cargo.toml
programs/my-first-program/src/: constants.rs  error.rs  lib.rs  state.rs
programs/my-first-program/src/instructions/: initialize.rs  mod.rs  verify_and_reward.rs
programs/my-first-program/tests/: test_initialize.rs
tests/: neuro_ledger.ts
