[package]
name = "neuro-ledger"
version = "0.1.0"
description = "NeuroLedger: ML predictions with ZK proofs on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "neuro_ledger"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.1.0"
solana-transaction = "3.1.0"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
